--- a/config.yaml
+++ b/config.yaml
@@ -84,6 +84,7 @@ params:
       target="_blank" rel="noopener">Stackbit</a>. Create yours <a
       href="https://app.stackbit.com/create?theme=fresh&utm_source=deployed-footer"
       target="_blank" rel="noopener">now</a>
+  domain: 'https://majestic-tortoise-1f3b3.netlify.app'
 taxonomies:
   stub: stub
 disableKinds:
